Fixes linting errors and adds sample tests
  - fixes errors pointedout by jshint
  - makes a working jest test example for client

--- a/client/jest.config.json
+++ b/client/jest.config.json
@@ -2,6 +2,9 @@
     "transform": {
         "^.+\\.js$": "babel-jest"
     },
+    "transformIgnorePatterns": [
+        "/node_modules/(?![d3-shape|recharts]).+\\.js$"
+    ],
     "collectCoverage": true,
     "collectCoverageFrom": [
         "src/**/*.js"
