--- a/client/jest.config.json
+++ b/client/jest.config.json
@@ -13,6 +13,7 @@
         "node_modules",
         "build"
     ],
+    "modulePathIgnorePatterns": ["test/e2e"],
     "coverageDirectory": "<rootDir>/coverage/",
     "coverageThreshold": {
         "global": {
