Sample end-to-end tests using Playwright framework
  Completes E2E tests for navigation links on all the pages

--- a/client/jest.config.json
+++ b/client/jest.config.json
@@ -15,6 +15,7 @@
         "node_modules",
         "build"
     ],
+    "modulePathIgnorePatterns": ["test/e2e"],
     "coverageDirectory": "<rootDir>/coverage/",
     "coverageThreshold": {
         "global": {
