--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
+    "develop": "npx react-scripts start",
     "test": "script/test.bash",
     "syntax": "script/syntax.bash",
     "build": "script/build.bash",
@@ -30,7 +31,8 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "recharts": "^2.1.13",
-    "serve": "^14.0.1"
+    "serve": "^14.0.1",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.18.10",
@@ -41,6 +43,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.3",
+    "@typescript-eslint/parser": "^5.34.0",
     "babel-jest": "^28.1.3",
     "eslint": "^8.22.0",
     "eslint-config-airbnb-base": "^15.0.0",
