--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -1,14 +1,14 @@
 {
     "env": {
-        "browser": true,
-        "es6": true,
-        "jest": true,
-        "jest/globals": true
+    "browser": true,
+    "es6": true,
+    "jest": true,
+    "jest/globals": true
     },
     "extends": [
-        "eslint:recommended",
-        "plugin:react/recommended",
-        "airbnb-base"
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "airbnb-base"
     ],
     "globals": {
     "Atomics": "readonly",
@@ -16,31 +16,50 @@
     },
     "settings": {
         "react": {
-            "pragma": "React",
             "version": "detect"
         },
         "import/resolver": {
             "node": {
-                "paths": ["src"],
-                "extensions": [".js", ".jsx", ".ts", ".tsx"]
+                "extensions": [".js", ".jsx"]
             }
         }
     },
-    "parser": "@typescript-eslint/parser",
     "parserOptions": {
+        "parser": "@babel/eslint-parser",
         "requireConfigFile": false,
         "ecmaFeatures": {
             "jsx": true
         },
-        "ecmaVersion": 11,
-        "sourceType": "module", // Allows for the use of imports
-        "project": "./tsconfig.json"
+        "ecmaVersion": 2018,
+        "sourceType": "module" // Allows for the use of imports
     },
-    "plugins": ["jsx-a11y", "react", "jest","@typescript-eslint"],
+    "plugins": ["jsx-a11y", "react", "jest"],
     "rules": {
+        // "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
         "no-console": "error",
         "import/first": "error",
         "react/prop-types": "off",  
-        "linebreak-style": 0 // disable linter linebreak rule, to allow for both unix and windows developement
-    }
+        "linebreak-style": 0, // disable linter linebreak rule, to allow for both unix and windows developement
+        "import/no-unresolved": "off",  // Whatever IDE will pass an error if if the module is not found, so no reason for this..
+        "import/extensions": "off"      // That includes the production build.. We use linter for code checking / clean code optimization..
+    },
+    "overrides": [
+        {
+            "files": ["*.ts","*.tsx"],
+            "settings": {
+                "react": {
+                    "pragma": "React",
+                    "version": "detect"
+                }
+            },
+            "parser": "@typescript-eslint/parser",
+            "parserOptions": {
+                "requireConfigFile": false,
+                "project": ["./tsconfig.json"]
+            },
+            "plugins":[
+                "@typescript-eslint"
+            ]
+        }
+    ]
 }
