Adds initial skeleton microservice on the server-side
  - Adds skeleton code for authentication microservice. The skeleton
    follows typescript conventions.
  - Adds initial sketches of application architecture

--- a/server/auth/babel.config.json
+++ b/server/auth/babel.config.json
@@ -4,9 +4,10 @@
       "@babel/preset-env",
       {
         "targets": {
-          "node": "current"
+          "node": true
         }
       }
-    ]
+    ],
+    "@babel/preset-typescript"
   ]
 }
