Fixes the configuration files.
  - changes the eslint, jest configuration files to TS
  - renames all javascript files to typescript
  - WIP the migration of javascript files to typescript

--- a/client/jest.config.json
+++ b/client/jest.config.json
@@ -1,13 +1,15 @@
 {
+    "preset": "ts-jest",
     "transform": {
-        "^.+\\.js$": "babel-jest"
+        "^.+\\.jsx?$": "babel-jest",
+        "^.+\\.tsx?$": "ts-jest"
     },
     "transformIgnorePatterns": [
         "/node_modules/(?![d3-shape|recharts]).+\\.js$"
     ],
     "collectCoverage": true,
     "collectCoverageFrom": [
-        "src/**/*.js"
+        "src/**/*.[jt]sx?"
     ],
     "coveragePathIgnorePatterns": [
         "node_modules",
