--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
   "author": "prasadtalasila <prasad.talasila@gmail.com>",
   "license": "MIT",
   "private": true,
+  "type": "module",
   "scripts": {
     "develop": "npx react-scripts start",
     "test": "script/test.bash",
@@ -40,9 +41,12 @@
     "@babel/eslint-parser": "^7.18.9",
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
+    "@jest/globals": "^28.1.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^28.1.7",
+    "@typescript-eslint/eslint-plugin": "^5.34.0",
     "@typescript-eslint/parser": "^5.34.0",
     "babel-jest": "^28.1.3",
     "eslint": "^8.22.0",
@@ -56,7 +60,8 @@
     "jshint": "^2.13.5",
     "prettier": "^2.7.1",
     "react-scripts": "^5.0.1",
-    "react-test-renderer": "^18.2.0"
+    "react-test-renderer": "^18.2.0",
+    "ts-jest": "^28.0.8"
   },
   "browserslist": {
     "production": [
