--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -26,8 +26,7 @@
     },
     "exclude": [
         "**/node_modules/*",
-        "test",
-        "babel.config.js",
+        "babel.config.cjs",
         "dist"
     ]
 }
