--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,10 +16,11 @@ jobs:
       - name: checkout
         uses: actions/checkout@v3
 
-      - uses: actions/cache@v2
-        with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
+      - name: set cache 
+        uses: actions/cache@v2
+          with:
+            path: '**/node_modules'
+            key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
 
       - name: setup node 
         uses: actions/setup-node@v3
@@ -27,7 +28,7 @@ jobs:
           node-version: 16
 
       - name: test client
-      - run: |
+        run: |
           cd client/
           yarn install
           yarn jest test
