--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,27 +13,27 @@ jobs:
     runs-on: ubuntu-latest
     continue-on-error: true
     steps:
-      - name: checkout
+      - name: Checkout
         uses: actions/checkout@v3
 
-      - name: set cache 
+      - name: Set cache 
         uses: actions/cache@v2
         with:
           path: '**/node_modules'
           key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
 
-      - name: setup node 
+      - name: Setup node 
         uses: actions/setup-node@v3
         with:
           node-version: 16
 
-      - name: test client
+      - name: Run client tests
         run: |
           cd client/
           yarn install
           yarn jest test
 
-      - name: test server
+      - name: Run server tests
         run: |
           cd ../server
           yarn install
