--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,38 +1,39 @@
 name: Run tests
 on: 
-  workflow_dispatch
-  pull_request:
-    branches:
-      - master
   push:
     branches:
       - master
+  pull_request:
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
   test:
     runs-on: ubuntu-latest
     continue-on-error: true
     steps:
-      - name: checkout
+      - name: Checkout
         uses: actions/checkout@v3
 
-      - uses: actions/cache@v2
+      - name: Set cache 
+        uses: actions/cache@v2
         with:
           path: '**/node_modules'
           key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
 
-      - name: setup node 
+      - name: Setup node 
         uses: actions/setup-node@v3
         with:
           node-version: 16
 
-      - name: test client
-      - run: |
+      - name: Run client tests
+        run: |
           cd client/
           yarn install
           yarn jest test
 
-      - name: test server
+      - name: Run server tests
         run: |
           cd ../server
           yarn install
