--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -1,42 +1,42 @@
-name: Run tests
+name: Make quality checks on the client react SPA application
+
 on: 
   push:
-    branches:
-      - master
   pull_request:
     branches:
       - main
   workflow_dispatch:
 
 jobs:
-  test:
+  client:
     runs-on: ubuntu-latest
     continue-on-error: true    
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Set cache 
-        uses: actions/cache@v2
-        with:
-          path: '**/node_modules'
-          key: ${{ runner.os }}-modules-${{ hashFiles('**/yarn.lock') }}
-
       - name: Setup node 
         uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
 
-      - name: Run client tests
+      - name: Run the linting checks
         continue-on-error: true
         run: |
           cd client/
           yarn install
-          yarn jest test
+          yarn syntax
 
-      - name: Run server tests
+      - name: Build the React SPA website
         continue-on-error: true
         run: |
-          cd server/auth/
+          cd client/
           yarn install
-          yarn jest test
+          yarn build
+
+      - name: Run client unit and integration tests
+        continue-on-error: true
+        run: |
+          cd client/
+          yarn install
+          yarn test
