--- a/client/package.json
+++ b/client/package.json
@@ -29,8 +29,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-    "recharts": "^2.1.13",
-    "serve": "^14.0.1"
+    "recharts": "^2.1.13"
   },
   "devDependencies": {
     "@babel/cli": "^7.18.10",
@@ -51,11 +50,11 @@
     "eslint-plugin-react": "^7.30.1",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^28.1.3",
-    "jshint": "^2.13.5",
     "playwright": "^1.25.0",
     "prettier": "^2.7.1",
     "react-scripts": "^5.0.1",
-    "react-test-renderer": "^18.2.0"
+    "react-test-renderer": "^18.2.0",
+    "serve": "^14.0.1"
   },
   "browserslist": {
     "production": [
