corrects ssl config

--- a/ssl/ssl.conf
+++ b/ssl/ssl.conf
@@ -110,5 +110,6 @@ DNS.4 = data.localhost
 DNS.5 = lib.localhost
 DNS.6 = dt.localhost
 DNS.7 = auth.localhost
+DNS.7 = gateway.localhost
 IP.1 = 127.0.0.1
 IP.2 = ::1
