Almost passing Dashboard test as is. Added "noImplicitAny": true to tsconfig

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-        "noImplicitAny": false, //raise error on any type
+        "noImplicitAny": true, //raise error on any type
         "allowSyntheticDefaultImports": true, //allow default imports from modules with no default export
         "sourceMap": true, //generate .map files
         "target": "es6", //target es6
