DUGK-1 Renamed files and changed config to use TS instead of JS

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -35,7 +35,7 @@
     },
     "plugins": ["jsx-a11y", "react", "jest"],
     "rules": {
-        // "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
+        "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
         "no-console": "error",
         "import/first": "error",
         "react/prop-types": "off",  
