DUGK-1 No more JS files, removing rule

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -13,16 +13,13 @@
         "removeComments": true, //remove comments from build
         "noImplicitReturns": true, //raise error on implicit returns
         "noUnusedLocals": true, //raise error on unused locals
-        "noUnusedParameters": false, //raise no error on unused parameters
+        "noUnusedParameters": true, //raise no error on unused parameters
         "strict": true, //enable all strict type-checking options
         "outDir": "dist", //output directory
         "baseUrl": "src", //base url for imports
         "typeRoots": ["node_modules/@types", //use node_modules/@types for type definitions
         ],
         "strictNullChecks": true, //enable strict null checks
-
-
-        "allowJs": true, //allow javascript files for now until we convert everything to typescript
     },
     "exclude": [
         "**/node_modules/*",
