DUGK-1 Added 'yarn dev' option for live development enviorment. Chagned Prettier to use single quotes. Relaxed lint rules again to reenable build

--- a/client/package.json
+++ b/client/package.json
@@ -14,12 +14,16 @@
     "build": "script/build.bash",
     "configapp": "script/config.bash",
     "start": "script/start.bash",
+    "dev": "react-scripts start",
     "clean": "script/clean.bash"
   },
   "eslintConfig": {
     "extends": [
       "react-app"
     ]
+  },
+  "prettier": {
+    "singleQuote": true
   },
   "dependencies": {
     "@emotion/react": "^11.10.0",
