Feature/convert frontend to typescript (#9)
* converted initial components to typescript, including linter and ts configuration

* changed configs after test on linux

* Fixes the configuration files.

  - changes the eslint, jest configuration files to TS
  - renames all javascript files to typescript
  - WIP the migration of javascript files to typescript

* converted menu to ts

* fixed link on button issue in menu items list

* styles removed, should be converted to ts / moved

* src/page/Menu.tsx

* Almost passing Dashboard test as is.
Added "noImplicitAny": true to tsconfig

* Conversion of Footer and MenuItems

* src/route/digitaltwins/Workflows.tsx + Title.tsx + test

* Converet to TypeScript - Account, AccountTabs and SignIn

* Fixed Menu by changing {} to <>

* linting

* linting

* Feature/convert frontend to typescript mathias (#5)

* bunch of conversion. not useful message

* færdig med conversion. Test virker ikke endnu

* bunch of conversion. not useful message

* færdig med conversion. Test virker ikke endnu

---------

Co-authored-by: Burnfarm <mathias.braendgaard@gmail.com>

* linting again....

* Upgraded test to React 18 from 17

* New buildable version with 2 changes to eslintrc

* Sample end-to-end tests using Playwright framework

  Completes E2E tests for navigation links on all the pages

* Adds initial skeleton microservice on the server-side

  - Adds skeleton code for authentication microservice. The skeleton
    follows typescript conventions.
  - Adds initial sketches of application architecture

* Updates to the architectural drawings

* add action for testing

* Add Github action for testing (#1)

* Refine Github action (#2)

* Adds ssl certificates and server gateway

  - Adds the shell scripts for generating ssl certificates. These
    certificates are self-signed and can be used in the application.
  - Updates the install script to install docker and openssl

--- a/client/jest.config.json
+++ b/client/jest.config.json
@@ -1,13 +1,15 @@
 {
+    "preset": "ts-jest",
     "transform": {
-        "^.+\\.js$": "babel-jest"
+        "^.+\\.jsx?$": "babel-jest",
+        "^.+\\.tsx?$": "ts-jest"
     },
     "transformIgnorePatterns": [
         "/node_modules/(?![d3-shape|recharts]).+\\.js$"
     ],
     "collectCoverage": true,
     "collectCoverageFrom": [
-        "src/**/*.js"
+        "src/**/*.[jt]sx?"
     ],
     "coveragePathIgnorePatterns": [
         "node_modules",
@@ -28,6 +30,9 @@
         "window.ENV.SERVER_PORT": 3500
     },
     "verbose": true,
-    "testRegex": "/test/.*\\.[jt]sx?$"
+    "testRegex": "/test/.*\\.[jt]sx?$",
+    "modulePaths": [
+        "<rootDir>/src/"
+      ]
 }
 
