--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -17,6 +17,11 @@
     "settings": {
         "react": {
             "version": "detect"
+        },
+        "import/resolver": {
+            "node": {
+                "extensions": [".js", ".jsx"]
+            }
         }
     },
     "parserOptions": {
@@ -30,6 +35,33 @@
     },
     "plugins": ["jsx-a11y", "react", "jest"],
     "rules": {
-        "import/no-extraneous-dependencies": ["error", {"devDependencies": true}]
-    }
+        "import/no-extraneous-dependencies": ["error", {"devDependencies": true}],
+        "no-console": "error",
+        "import/first": "error",
+        "react/prop-types": "off",  
+        "linebreak-style": 0, // disable linter linebreak rule, to allow for both unix and windows developement
+        "import/no-unresolved": "off",  // Whatever IDE will pass an error if if the module is not found, so no reason for this..
+        "import/extensions": "off",      // That includes the production build.. We use linter for code checking / clean code optimization..
+        "no-use-before-define": "off",
+        "indent": ["error", 2]
+    },
+    "overrides": [
+        {
+            "files": ["*.ts","*.tsx"],
+            "settings": {
+                "react": {
+                    "pragma": "React",
+                    "version": "detect"
+                }
+            },
+            "parser": "@typescript-eslint/parser",
+            "parserOptions": {
+                "requireConfigFile": false,
+                "project": ["./tsconfig.json"]
+            },
+            "plugins":[
+                "@typescript-eslint"
+            ]
+        }
+    ]
 }
