--- a/client/package.json
+++ b/client/package.json
@@ -6,18 +6,24 @@
   "author": "prasadtalasila <prasad.talasila@gmail.com>",
   "license": "MIT",
   "private": true,
+  "type": "module",
   "scripts": {
+    "develop": "npx react-scripts start",
     "test": "script/test.bash",
     "syntax": "script/syntax.bash",
     "build": "script/build.bash",
     "configapp": "script/config.bash",
     "start": "script/start.bash",
+    "dev": "react-scripts start",
     "clean": "script/clean.bash"
   },
   "eslintConfig": {
     "extends": [
       "react-app"
     ]
+  },
+  "prettier": {
+    "singleQuote": true
   },
   "dependencies": {
     "@emotion/react": "^11.10.0",
@@ -29,7 +35,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-    "recharts": "^2.1.13"
+    "recharts": "^2.1.13",
+    "serve": "^14.0.1",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "@babel/cli": "^7.18.10",
@@ -37,10 +45,14 @@
     "@babel/eslint-parser": "^7.18.9",
     "@babel/preset-env": "^7.18.10",
     "@babel/preset-react": "^7.18.6",
+    "@jest/globals": "^28.1.3",
     "@playwright/test": "^1.25.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^14.4.3",
+    "@types/jest": "^28.1.7",
+    "@typescript-eslint/eslint-plugin": "^5.34.0",
+    "@typescript-eslint/parser": "^5.34.0",
     "babel-jest": "^28.1.3",
     "eslint": "^8.22.0",
     "eslint-config-airbnb-base": "^15.0.0",
@@ -54,7 +66,7 @@
     "prettier": "^2.7.1",
     "react-scripts": "^5.0.1",
     "react-test-renderer": "^18.2.0",
-    "serve": "^14.0.1"
+    "ts-jest": "^28.0.8"
   },
   "browserslist": {
     "production": [
