setup of lib + creation of readdir prototype
building discovery-service

creating of service readdir

This is the service that returns content of the queried directory

Revert "creating of service readdir"

This reverts commit a8dbff94ac5aba6b937afcf2fa4ab5655945ba18.

Revert "Revert "creating of service readdir""

This reverts commit 55d1bfcdcc76f50ad7b4bc15a44952f0efc815cf.

Delete .DS_Store

creation of lib

update of gitignore, to ignore DS_store

gitignore update

create lib

update gitignore

creation of lib

update of lib

removing package and yarn in outer folder

filesystem relative path functionality

unit testing

move of /test folder and update of FilesService

resolver unit test and integration test

tidying up unit test

update of unit tests

updating integration test

Update app.e2e-spec.ts

correspondance with frontend

fix eslint

Co-Authored-By: levi <jkv@levisen.eu>
Co-Authored-By: prasadtalasila <prasad.talasila@gmail.com>
Co-Authored-By: Burnfarm <mathias.braendgaard@gmail.com>
Co-Authored-By: Omar <omarg@live.dk>
Co-Authored-By: Omarley7 <51030995+Omarley7@users.noreply.github.com>
Co-Authored-By: apetriceanu <apetriceanu@live.com>
Co-Authored-By: Prasad Talasila <prasadtalasila@users.noreply.github.com>

update package.json, so using bash files

Co-Authored-By: levi <jkv@levisen.eu>
Co-Authored-By: prasadtalasila <prasad.talasila@gmail.com>
Co-Authored-By: Burnfarm <mathias.braendgaard@gmail.com>
Co-Authored-By: Omar <omarg@live.dk>
Co-Authored-By: Omarley7 <51030995+Omarley7@users.noreply.github.com>
Co-Authored-By: apetriceanu <apetriceanu@live.com>
Co-Authored-By: Prasad Talasila <prasadtalasila@users.noreply.github.com>

update package - to get jest --coverage  working

Co-Authored-By: levi <jkv@levisen.eu>
Co-Authored-By: prasadtalasila <prasad.talasila@gmail.com>
Co-Authored-By: Burnfarm <mathias.braendgaard@gmail.com>
Co-Authored-By: Omar <omarg@live.dk>
Co-Authored-By: Omarley7 <51030995+Omarley7@users.noreply.github.com>
Co-Authored-B

--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -1,6 +1,6 @@
 name: Check the server microservices
 
-on: 
+on:
   push:
   pull_request:
   workflow_dispatch:
@@ -8,28 +8,28 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
-    continue-on-error: true    
+    continue-on-error: true
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup node 
+      - name: Setup node
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: 'yarn'
-          cache-dependency-path: '**/yarn.lock'
+          cache: "yarn"
+          cache-dependency-path: "**/yarn.lock"
 
       - name: Run the linting checks
         continue-on-error: true
         run: |
-          cd servers/auth
+          cd servers/lib
           yarn install
           yarn syntax
 
       - name: Run authentication server unit tests
         continue-on-error: true
         run: |
-          cd servers/auth/
+          cd servers/lib/
           yarn install
           yarn test
