Small fixes on layout (using Flexbox untill theres a need for Grid)

--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
 REACT_APP_SERVER_HOSTNAME =  'localhost';
 SERVER_PORT =  3500;
-REACT_APP_JUPYTER_URL = https://jupyterlite.github.io/demo/repl/index.html?kernel=javascript&toolbar=;
+JUPYTER_URL = https://jupyterlite.github.io/demo/repl/index.html?kernel=javascript&toolbar=;
