removed .env.temp and updated .env

--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,5 @@
 REACT_APP_SERVER_HOSTNAME =  'localhost';
 SERVER_PORT =  3500;
-JUPYTER_URL = https://jupyterlite.github.io/demo/repl/index.html?kernel=javascript&toolbar=;
+REACT_APP_URL_LIB = https://ingenioer.au.dk/
+REACT_APP_URL_DT = https://jupyterlite.github.io/demo/repl/index.html
+REACT_APP_URL_WORKBENCH = https://ece.au.dk/
