--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -22,11 +22,14 @@
   "dependencies": {
     "@nestjs/apollo": "^10.2.0",
     "@nestjs/common": "^9.0.0",
-    "@nestjs/core": "^9.0.0",
+    "@nestjs/config": "^2.3.1",
+    "@nestjs/core": "^9.3.9",
     "@nestjs/graphql": "^10.2.0",
     "@nestjs/platform-express": "^9.0.0",
     "apollo-server-express": "^3.11.1",
+    "dotenv": "^16.0.3",
     "graphql": "^16.6.0",
+    "graphql-tools": "^8.3.18",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
