--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^9.0.0",
     "apollo-server-express": "^3.11.1",
     "dotenv": "^16.0.3",
+    "glab": "^1.0.2",
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.18",
     "reflect-metadata": "^0.1.13",
