--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -21,16 +21,21 @@
   },
   "dependencies": {
     "@nestjs/apollo": "^10.2.0",
-    "@nestjs/common": "^9.0.0",
+    "@nestjs/axios": "^2.0.0",
+    "@nestjs/common": "^9.3.9",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.3.9",
     "@nestjs/graphql": "^10.2.0",
     "@nestjs/platform-express": "^9.0.0",
     "apollo-server-express": "^3.11.1",
+    "axios": "^1.3.4",
+    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
+    "gitlab": "^14.2.2",
     "glab": "^1.0.2",
     "graphql": "^16.6.0",
     "graphql-tools": "^8.3.18",
+    "jest-cli": "^29.4.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0"
   },
