Test can now run, but noting is being tested yet. Watch out for Grid items, specific needs.

--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
     "recharts": "^2.1.13",
+    "resize-observer-polyfill": "^1.5.1",
     "serve": "^14.0.1",
     "typescript": "^4.7.4"
   },
