--- a/client/jest.config.json
+++ b/client/jest.config.json
@@ -1,45 +1,36 @@
 {
-    "preset": "ts-jest",
-    "transform": {
-        "^.+\\.jsx?$": "babel-jest",
-        "^.+\\.tsx?$": "ts-jest"
-    },
-    "transformIgnorePatterns": [
-        "/node_modules/(?![d3-shape|recharts]).+\\.js$"
-    ],
-    "collectCoverage": true,
-    "coverageReporters": [
+  "preset": "ts-jest",
+  "transform": {
+    "^.+\\.jsx?$": "babel-jest",
+    "^.+\\.tsx?$": "ts-jest"
+  },
+  "transformIgnorePatterns": ["/node_modules/(?![d3-shape|recharts]).+\\.js$"],
+  "collectCoverage": true,
+  "coverageReporters": [
         "text",
         "cobertura",
         "clover",
         "lcov",
         "json"
       ],
-    "collectCoverageFrom": [
-        "src/**/*.[jt]sx?"
-    ],
-    "coveragePathIgnorePatterns": [
-        "node_modules",
-        "build"
-    ],
-    "modulePathIgnorePatterns": ["test/e2e"],
-    "coverageDirectory": "<rootDir>/coverage/",
-    "coverageThreshold": {
-        "global": {
-            "branches": 20,
-            "functions": 30,
-            "lines": 50,
-            "statements": 50
-        }
-    },
-    "globals": {
-        "window.ENV.SERVER_HOSTNAME": "localhost",
-        "window.ENV.SERVER_PORT": 3500
-    },
-    "verbose": true,
-    "testRegex": "/test/.*\\.[jt]sx?$",
-    "modulePaths": [
-        "<rootDir>/src/"
-      ]
+  "collectCoverageFrom": ["src/**/*.[jt]sx?"],
+  "coveragePathIgnorePatterns": ["node_modules", "build"],
+  "modulePathIgnorePatterns": ["test/e2e"],
+  "coverageDirectory": "<rootDir>/coverage/",
+  "coverageThreshold": {
+    "global": {
+      "branches": 20,
+      "functions": 30,
+      "lines": 50,
+      "statements": 50
+    }
+  },
+  "globals": {
+    "window.ENV.SERVER_HOSTNAME": "localhost",
+    "window.ENV.SERVER_PORT": 3500
+  },
+  "verbose": true,
+  "testRegex": "/test/.*\\.[jt]sx?$",
+  "modulePaths": ["<rootDir>/src/"],
+  "setupFilesAfterEnv": ["<rootDir>/config/test.js"]
 }
-
