--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -28,9 +28,10 @@
   },
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "parser": "@babel/eslint-parser",
     "requireConfigFile": false,
     "ecmaFeatures": {
+      "emacVersion": 6,
+      "sourceType": "module",
       "jsx": true
     },
     "ecmaVersion": 2018,
