Dugk 33 test suite for page history (#26)
Added test for History

--- a/client/jest.config.json
+++ b/client/jest.config.json
@@ -9,7 +9,7 @@
   "coverageReporters": ["text", "cobertura", "clover", "lcov", "json"],
   "collectCoverageFrom": ["src/**/*.tsx"],
   "coveragePathIgnorePatterns": ["node_modules", "build"],
-  "modulePathIgnorePatterns": ["test/e2e"],
+  "modulePathIgnorePatterns": ["test/e2e","mocks","config"],
   "coverageDirectory": "<rootDir>/coverage/",
   "coverageThreshold": {
     "global": {
