Dugk 41 static analysis testing (#25)
* DUGK-40 Added husky
Configured pre-commit to run syntax and format.
Locked prettier version
Fixed AppProvider

* DUGK-41 Now running test on push.
Bypass with -y flag.

* DUGK-41 Removed failing bypass with '-y'
use `HUSKY=0 git push` to bypass

* excluded huske from codeclimate

* DUGK-41 Fixed build issue

* DUGK-41 skip husky on pipeline

---------

Co-authored-by: Asger <asger_bb@hotmail.com>

--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -1,6 +1,6 @@
 name: Make quality checks on the client react SPA application
 
-on: 
+on:
   push:
   pull_request:
   workflow_dispatch:
@@ -12,13 +12,14 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Setup node 
+      - name: Setup node
+        env:
+          HUSKY_SKIP_INSTALL: 1
         uses: actions/setup-node@v3
         with:
           node-version: 18
-          cache: 'yarn'
-          cache-dependency-path: '**/yarn.lock'
-
+          cache: "yarn"
+          cache-dependency-path: "**/yarn.lock"
 
       - name: Run the linting checks
         continue-on-error: true
