--- a/client/jest.config.json
+++ b/client/jest.config.json
@@ -9,7 +9,7 @@
   "coverageReporters": ["text", "cobertura", "clover", "lcov", "json"],
   "collectCoverageFrom": ["src/**/*.tsx"],
   "coveragePathIgnorePatterns": ["node_modules", "build"],
-  "modulePathIgnorePatterns": ["test/e2e","mocks","config"],
+  "modulePathIgnorePatterns": ["test/e2e", "mocks", "config"],
   "coverageDirectory": "<rootDir>/coverage/",
   "coverageThreshold": {
     "global": {
@@ -27,7 +27,7 @@
   "testRegex": "/test/.*\\.test.tsx?$",
   "modulePaths": ["<rootDir>/src/"],
   "setupFilesAfterEnv": [
-    "<rootDir>/config/test.js",
-    "<rootDir>/test/config/importJestDom.ts"
+    "<rootDir>/test/unitTests/config/test.env.js",
+    "<rootDir>/test/unitTests/config/importJestDom.ts"
   ]
 }
