Unit test and documentation (#20)
  - Improves tests. Even the iframe tests work now.
  - Adds git hooks to client
  - Adds new documentation for using react web package
* DUGK-37 iframe test (#16)

* DUGK-37 iframe test

* DUGK-26 Made tests work on iframe.
Test coverage added on `yarn test`.

---------

Co-authored-by: Asger <asger_bb@hotmail.com>
Co-authored-by: Burnfarm <mathias.braendgaard@gmail.com>
Co-authored-by: Omar <omarg@live.dk>

--- a/client/jest.config.json
+++ b/client/jest.config.json
@@ -1,21 +1,15 @@
 {
   "preset": "ts-jest",
+  "testEnvironment": "jsdom",
   "transform": {
-    "^.+\\.jsx?$": "babel-jest",
     "^.+\\.tsx?$": "ts-jest"
   },
   "transformIgnorePatterns": ["/node_modules/(?![d3-shape|recharts]).+\\.js$"],
   "collectCoverage": true,
-  "coverageReporters": [
-        "text",
-        "cobertura",
-        "clover",
-        "lcov",
-        "json"
-      ],
-  "collectCoverageFrom": ["src/**/*.[jt]sx?"],
+  "coverageReporters": ["text", "cobertura", "clover", "lcov", "json"],
+  "collectCoverageFrom": ["src/**/*.tsx"],
   "coveragePathIgnorePatterns": ["node_modules", "build"],
-  "modulePathIgnorePatterns": ["test/e2e"],
+  "modulePathIgnorePatterns": ["test/e2e", "mocks", "config"],
   "coverageDirectory": "<rootDir>/coverage/",
   "coverageThreshold": {
     "global": {
@@ -30,7 +24,10 @@
     "window.ENV.SERVER_PORT": 3500
   },
   "verbose": true,
-  "testRegex": "/test/.*\\.[jt]sx?$",
+  "testRegex": "/test/.*\\.test.tsx?$",
   "modulePaths": ["<rootDir>/src/"],
-  "setupFilesAfterEnv": ["<rootDir>/config/test.js"]
+  "setupFilesAfterEnv": [
+    "<rootDir>/test/unitTests/config/test.env.js",
+    "<rootDir>/test/unitTests/config/importJestDom.ts"
+  ]
 }
