creating env variables in server.yml

--- a/.github/workflows/server.yml
+++ b/.github/workflows/server.yml
@@ -31,6 +31,15 @@ jobs:
           cd servers/lib
           yarn install
           yarn test
+        env:
+          PORT: 3000
+          LOCAL_PATH: /Users/phillipravn/DTaaS/data/assets
+          GITLAB_GROUP: dtaas
+          GITLAB_URL: https://gitlab.com/api/graphql
+          TOKEN: token
+          MODE: gitlab
+          LOG_LEVEL: debug
+          TEST_PATH: /Users/phillipravn/DTaaS/servers/lib/test/data/test_assets
 
       - name: Upload unit test coverage to Codecov
         uses: codecov/codecov-action@v3
