--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -14,7 +14,6 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.10",
-    "@gqty/cli": "^3.3.1-alpha-4fa7ef40.0",
     "@nestjs/apollo": "^10.2.0",
     "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.3.9",
@@ -22,23 +21,14 @@
     "@nestjs/core": "^9.3.9",
     "@nestjs/graphql": "^10.2.0",
     "@nestjs/platform-express": "^9.0.0",
-    "apollo-cache-inmemory": "^1.6.6",
-    "apollo-client": "^2.6.10",
     "apollo-server-express": "^3.12.0",
     "dotenv": "^16.0.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
     "graphql": "^16.6.0",
-    "graphql-cli": "^4.1.0",
-    "graphql-codegen": "^0.4.0",
-    "graphql-tools": "^8.3.18",
-    "lint": "^0.8.19",
-    "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0",
-    "test": "^3.3.0"
+    "reflect-metadata": "^0.1.13"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.21.0",
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
@@ -53,10 +43,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "jest": "29.3.1",
     "prettier": "^2.3.2",
-    "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "^29.0.5",
-    "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.1",
     "typescript": "^4.7.4"
