--- a/servers/lib/package.json
+++ b/servers/lib/package.json
@@ -15,7 +15,6 @@
   "dependencies": {
     "@apollo/client": "^3.7.10",
     "@nestjs/apollo": "^10.2.0",
-    "@nestjs/axios": "^2.0.0",
     "@nestjs/common": "^9.3.9",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.3.9",
@@ -25,8 +24,10 @@
     "dotenv": "^16.0.3",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jest": "^27.2.1",
+    "express": "^4.17.1",
     "graphql": "^16.6.0",
-    "reflect-metadata": "^0.1.13"
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^7.1.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
