--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,43 +1,45 @@
 ---
 engines:
-    shellcheck:
-        enabled: true
-    checkstyle:
-        enabled: true
-        channel: "beta"
-    csslint:
-        enabled: true
-    duplication:
-        enabled: true
-        config:
-            languages:
-                - typescript
-                - javascript
-                - python
-                - php
-    eslint:
-        enabled: true
-        config:
-            config: .eslintrc
-    fixme:
-        enabled: true
+  shellcheck:
+    enabled: true
+  checkstyle:
+    enabled: true
+    channel: "beta"
+  csslint:
+    enabled: true
+  duplication:
+    enabled: true
+    config:
+      enabled: true
+      threshold: 10
+      languages:
+        - typescript
+        - javascript
+        - python
+        - php
+  eslint:
+    enabled: true
+    config:
+      config: .eslintrc
+  fixme:
+    enabled: true
 ratings:
-    paths:
-        - "**.css"
-        - "**.inc"
-        - "**.ts"
-        - "**.js"
-        - "**.jsx"
-        - "**.tsx"
-        - "**.module"
-        - "**.sh"
-        - "**.bash"
+  paths:
+    - "**.css"
+    - "**.inc"
+    - "**.ts"
+    - "**.js"
+    - "**.jsx"
+    - "**.tsx"
+    - "**.module"
+    - "**.sh"
+    - "**.bash"
 exclude_paths:
-    - "**.md"
-    - "**.txt"
-    - "**.json"
-    - "**.lock"
-    - client/test/
-    - docs/
-    - deploy/
-    - .husky/
+  - "**.md"
+  - "**.txt"
+  - "**.json"
+  - "**.lock"
+  - client/test/
+  - docs/
+  - deploy/
+  - .husky/
