Improves single node installation instructions
  - Adds README for single node installation
  - Makes single node setup default for gateway configuration
  - Adjusts the Vagrantfile to reflect generic configuration

--- a/servers/config/gateway/traefik.yml
+++ b/servers/config/gateway/traefik.yml
@@ -11,9 +11,9 @@ providers:
     watch: true
 
 # Enable traefik ui
-api:
-  dashboard: true
-  insecure: true
+#dapi:
+#  dashboard: true
+#  insecure: true
 
 # Log level INFO|DEBUG|ERROR
 log:
