--- a/client/package.json
+++ b/client/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "description": "Web client for Digital Twin as a Service (DTaaS)",
   "main": "index.tsx",
-  "author": "prasadtalasila <prasad.talasila@gmail.com>",
-  "license": "SEE LICENSE IN LICENSE.md",
+  "author": "prasadtalasila <prasad.talasila@gmail.com> (http://prasad.talasila.in/)",
+  "contributors": [
+    "Omar Suleiman",
+    "Asger Busk Breinholm",
+    "Mathias Brændgaard"
+  ],
+  "license": "The INTO-CPS Association",
   "private": false,
   "type": "module",
   "scripts": {
