--- a/client/package.json
+++ b/client/package.json
@@ -20,8 +20,7 @@
     "configapp": "script/config.bash",
     "start": "script/start.bash",
     "clean": "script/clean.bash",
-    "format": "prettier --ignore-path ../.gitignore --write \"**/*.{ts,tsx,css,scss}\"",
-    "prepare": "cd .. && husky install"
+    "format": "prettier --ignore-path ../.gitignore --write \"**/*.{ts,tsx,css,scss}\""
   },
   "eslintConfig": {
     "extends": [
@@ -40,22 +39,28 @@
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-is": "^18.2.0",
     "react-router-dom": "^6.3.0",
+    "react-tabs": "^6.0.0",
     "recharts": "^2.1.13",
     "resize-observer-polyfill": "^1.5.1",
     "serve": "^14.0.1",
+    "styled-components": "^5.3.9",
     "typescript": "^4.9.5"
   },
   "devDependencies": {
     "@babel/core": "^7.21.3",
     "@babel/plugin-syntax-flow": "^7.18.6",
     "@babel/plugin-transform-react-jsx": "^7.21.0",
-    "@playwright/test": "^1.25.0",
+    "@playwright/test": "^1.32.1",
+    "@testing-library/dom": "^9.2.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@testing-library/user-event": "^14.4.3",
     "@types/jest": "^29.5.0",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.34.0",
     "@typescript-eslint/parser": "^5.34.0",
     "eslint": "^8.22.0",
@@ -65,11 +70,11 @@
     "eslint-plugin-jest": "^27.2.1",
     "eslint-plugin-jsx-a11y": "^6.6.1",
     "eslint-plugin-react": "^7.30.1",
-    "husky": "^8.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
-    "playwright": "^1.25.0",
+    "playwright": "^1.32.1",
     "prettier": "2.7.1",
+    "react-iframe": "^1.8.5",
     "react-scripts": "^5.0.1",
     "ts-jest": "^29.0.5"
   },
