--- a/servers/config/gateway/dynamic/fileConfig.yml
+++ b/servers/config/gateway/dynamic/fileConfig.yml
@@ -3,12 +3,18 @@ http:
     lib:
       entryPoints:
         - http
-      rule: 'Host(`localhost`) && PathPrefix(`/lib`)'
+      rule: 'Host(`localhost`)'
       service: lib
+
+    dashboard:
+      entryPoints:
+        - http
+      rule: 'Host(`gateway.localhost`)'
+      service: api@internal
 
 
   services:
     lib:
       loadBalancer:
         servers:
-          - url: "http://localhost:3000"
+          - url: "http://localhost:4000"
