--- a/servers/config/gateway/traefik.yml
+++ b/servers/config/gateway/traefik.yml
@@ -11,9 +11,9 @@ providers:
     watch: true
 
 # Enable traefik ui
-#dapi:
-#  dashboard: true
-#  insecure: true
+api:
+  dashboard: true
+  debug: true
 
 # Log level INFO|DEBUG|ERROR
 log:
