Added configapp to test step of pipeline. Coverage is now above threshold. Fixed menu tests.

--- a/.github/workflows/client.yml
+++ b/.github/workflows/client.yml
@@ -29,6 +29,7 @@ jobs:
           cd client/	
           yarn install	
           yarn build
+          yarn configapp dev
       - name: Run client unit and integration tests
         run: |
           cd client/	
